Write swagger comment
